--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -1,3 +1,6 @@
+@import '../../sass/abstracts/variables.scss';
+@import '../../sass/base/typography.scss';
+@import '../../sass/base/animations.scss';
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba($primary-color-light, 0.8), rgba($primary-color-dark, 0.8)), url(../img/hero.jpg);
