Convert pages into react components

--- a/sass/layouts/_grid.scss
+++ b/sass/layouts/_grid.scss
@@ -1,3 +1,6 @@
+@import '../abstracts/variables.scss';
+@import '../abstracts/mixins.scss';
+
 .row {
   max-width: $grid-width;
   // background-color: #ffff00;
