--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -33,7 +33,7 @@
 }
 
 .book {
-  background-image: linear-gradient(105deg, rgba($color-white, 0.9) 0%, rgba($color-white, 0.9) 50%, transparent 50%), url(../img/nat-10.jpg);
+  background-image: linear-gradient(105deg, rgba($color-white, 0.9) 0%, rgba($color-white, 0.9) 50%, transparent 50%), url(../img/zanzibar-4.jpg);
   background-size: 100%;
   height: 50rem;
   border-radius: 3px;
