--- a/sass/layouts/_popup.scss
+++ b/sass/layouts/_popup.scss
@@ -6,12 +6,12 @@
   left: 0;
   z-index: 943000;
   background-color: rgba($color-gray-dark-3, 0.9);
-  opacity: 0;
-  visibility: hidden;
   transition: all 0.3s;
-  &:target {
-    opacity: 1;
-    visibility: visible;
+  // opacity: 0;
+  // visibility: hidden;
+  &__hide {
+    opacity: 0;
+    visibility: hidden;
   }
   &__content {
     background-color: $color-white;
@@ -22,14 +22,15 @@
     overflow: hidden;
     box-shadow: 0 2rem 4rem rgba($black-color, 0.2);
     @include centerHorizontalAndVertical;
-    opacity: 0;
-    transform: translate(-50%, -50%) scale(0.5);
+    // opacity: 0;
+    transform: translate(-50%, -50%) scale(0.9);
     transition: all 0.4s 0.2s;
   }
 
   &__left {
     display: table-cell;
-    width: 33.3333333%;
+    // width: 33.3333333%;
+    width: 33.6333333%;
   }
 
   &__right {
