--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -8,11 +8,15 @@
   &__logo-box {
     text-align: center;
     margin-bottom: 8rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   &__logo {
     width: 15rem;
     height: auto;
+    display: block;
   }
 
   &__navigation {
