--- a/sass/layouts/_popup.scss
+++ b/sass/layouts/_popup.scss
@@ -4,7 +4,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 943000;
+  // z-index: 943000;
   z-index: 5499;
   background-color: rgba($color-gray-dark-3, 0.9);
   transition: all 0.3s;
