Set custome color to heading tertiary

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -44,6 +44,7 @@
   font-size: $default-font-size;
   font-weight: 700;
   text-transform: uppercase;
+  color: $color-gray-dark;
 }
 .paragraph {
   font-size: $default-font-size;
