--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -45,6 +45,7 @@
     margin-left: 2rem;
     margin-top: 0.7rem;
     transition: all 0.3s;
+    color: $color-gray-dark-2;
   }
 
   &__radio-group {
